--- a/main_page.html
+++ b/main_page.html
@@ -38,10 +38,12 @@
           <ul class="nav navbar-nav">
             <li id="main_page"><a href="/main_page">Главная</a></li>
             <li id="sport_org"><a href="/sport_org">Спортивные организации</a></li>
+            <li id="mess_board"><a href="/coaches">Тренера</a></li>
             <li id="schedule"><a href="/schedule">Расписание</a></li>
             <li id="so_reg"><a href="/so_reg">Регистрация СО</a></li>
+            <li id="coach_reg"><a href="/coach_reg">Регистрация Тренера</a></li>
             <li id="mess_board"><a href="/mess_board">Объявления</a></li>
-            <li id="mess_board"><a href="/coaches">Тренера</a></li>
+
             <!-- <li id="for_coaches"><a href="/for_coaches">Тренерам</a></li>
                 <li id="for_stuff"><a href="/for_stuff">Обслуживающему персоналу</a></li> -->
           </ul>
